# amr-wind

./: .buildinfo  .clang-format  .clang-tidy  .codespell-ignore-words  .codespellrc  .dockerignore  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.txt  CTestConfig.cmake  Dockerfile  LICENSE  README.md  TODO  bibrefs.html  dependencies  genindex.html  getting_started.html  index.html  make.incflo  mfix_tracker  objects.inv  references.html  search.html  searchindex.js
amr-wind/: CFDSim.H  CFDSim.cpp  CMakeLists.txt  helics.H  helics.cpp  incflo.H  incflo.cpp  incflo_advance.cpp  incflo_compute_dt.cpp  incflo_enums.H  incflo_regrid.cpp  incflo_tagging.cpp  main.cpp
amr-wind/boundary_conditions/: BCInterface.H  BCInterface.cpp  CMakeLists.txt  FixedGradientBC.H  FixedGradientBC.cpp  MassInflowOutflowBC.H  MassInflowOutflowBC.cpp  MassOutflowBC.H  MassOutflowBC.cpp  README.org  incflo_set_velocity_bcs.cpp  scalar_bcs.H  scalar_bcs.cpp  velocity_bcs.H
amr-wind/convection/: CMakeLists.txt  Godunov.H  MOL.H  incflo_MAC_projection.cpp  incflo_convection_K.H  incflo_godunov_advection.cpp  incflo_godunov_central.H  incflo_godunov_minmod.H  incflo_godunov_plm.H  incflo_godunov_plm.cpp  incflo_godunov_ppm.H  incflo_godunov_ppm.cpp  incflo_godunov_ppm_nolim.H  incflo_godunov_predict.cpp  incflo_godunov_upwind.H  incflo_godunov_weno.H  incflo_godunov_weno.cpp  incflo_mol_fluxes.cpp  incflo_mol_predict.cpp
amr-wind/core/: CMakeLists.txt  CollMgr.H  ExtSolver.H  Factory.H  Field.H  Field.cpp  FieldBCOps.H  FieldDescTypes.H  FieldFillPatchOps.H  FieldRepo.H  FieldRepo.cpp  FieldUtils.H  IntField.H  IntField.cpp  IntScratchField.H  IntScratchField.cpp  MLMGOptions.H  MLMGOptions.cpp  MeshMap.H  MeshMap.cpp  MultiParser.H  Physics.H  ScratchField.H  ScratchField.cpp  SimTime.H  SimTime.cpp  Slice.H  ViewField.H  ViewField.cpp  field_ops.H  gpu_utils.H
amr-wind/derive/: CMakeLists.txt  compute_gradient.cpp  compute_strainrate.cpp  derive.cpp  derive_K.H  field_algebra.cpp
amr-wind/diffusion/: diffusion.H  incflo_diffusion.cpp
amr-wind/eos_models/: EOSModel.H
amr-wind/equation_systems/: AdvOp_Godunov.H  AdvOp_MOL.H  BCOps.H  CMakeLists.txt  CompRHSOps.H  DiffusionOps.H  DiffusionOps.cpp  PDE.H  PDEBase.H  PDEBase.cpp  PDEFields.H  PDEHelpers.H  PDEOps.H  PDETraits.H  SchemeTraits.H  SourceTerm.H
amr-wind/fvm/: curvature.H  divergence.H  filter.H  filter_harmonic.H  fvm.H  fvm_utils.H  gradient.H  laplacian.H  nonLinearSum.H  qcriterion.H  qcriterion_nondim.H  stencils.H  strainrate.H  vorticity.H  vorticity_mag.H
amr-wind/ibm/: CMakeLists.txt  IB.H
amr-wind/immersed_boundaries/: CMakeLists.txt  IB.H  IBContainer.H  IBModel.H
amr-wind/immersed_boundary/: CMakeLists.txt  IB.H  IB.cpp  IBContainer.H  IBContainer.cpp  IBModel.H  IBOps.H  IBOpsI.H  IBParser.H  IBSrcOp.H  IBTypes.H  IBUtils.H  IBUtils.cpp
amr-wind/mesh_mapping_models/: ABL2ConstantScaling.H  ABL2ConstantScaling.cpp  ABLScaling.H  ABLScaling.cpp  CMakeLists.txt  ChannelFlowMap.H  ChannelFlowMap.cpp  ChannelFlowScaling.H  ChannelFlowScaling.cpp  ConstantMap.H  ConstantMap.cpp  ConstantScaling.H  ConstantScaling.cpp  ExpScaling.H  ExpScaling.cpp  Geom2ConstantScaling.H  Geom2ConstantScaling.cpp
amr-wind/mms/: MMS.cpp  MMSForcing.H  MMSForcing.cpp
amr-wind/multiphase_physics/: CMakeLists.txt  MultiPhase.H  MultiPhase.cpp  VortexPatch.H  VortexPatch.cpp  VortexPatchFieldInit.H  VortexPatchFieldInit.cpp  ZalesakDisk.H  ZalesakDisk.cpp  ZalesakDiskFieldInit.H  ZalesakDiskFieldInit.cpp
amr-wind/ocean_waves/: CMakeLists.txt  OceanWaves.H  OceanWaves.cpp  OceanWavesModel.H  OceanWavesOps.H  OceanWavesTypes.H
amr-wind/overset/: CMakeLists.txt  OversetManager.H  OversetOps.H  OversetOps.cpp  TiogaInterface.H  overset_ops_K.H  (+5 more)
docs/: .gitignore  CMakeLists.txt  Doxyfile.breathe.in  Doxyfile.in
src/: CFDSim.H  CFDSim.cpp  CMakeLists.txt  LevelData.H  Make.incflo  Make.package  advance.cpp  incflo.H  incflo.cpp  incflo_F.H  incflo_advance.cpp  incflo_apply_corrector.cpp  incflo_apply_predictor.cpp  incflo_arrays.cpp  incflo_bclist.H  incflo_compute_dt.cpp  incflo_compute_forces.cpp  incflo_enums.H  incflo_field_repo.cpp  incflo_level.H  incflo_level.cpp  incflo_proj_F.H  incflo_regrid.cpp  incflo_tagging.cpp  main.cpp  param_mod.f90  param_mod_F.H
test/: CMakeLists.txt  CTestCustom.cmake  CTestList.cmake  CTestNightlyScript.cmake  GNUmakefile  README.md  benchmark.channel_cylinder  benchmark.channel_cylinder-x  benchmark.channel_cylinder-xx  benchmark.channel_cylinder-y  benchmark.channel_cylinder-yy  benchmark.channel_cylinder-z  benchmark.channel_cylinder-zz  benchmark.channel_spherecube  benchmark.couette  benchmark.couette_poiseuille  benchmark.double_shear_layer  benchmark.double_shear_restart  benchmark.eb_lid_driven_cavity  benchmark.lid_driven_cavity  benchmark.poiseuille_cylinder_bingham  benchmark.poiseuille_cylinder_newtonian  benchmark.poiseuille_halfplane_newtonian  benchmark.poiseuille_plane_bingham  benchmark.poiseuille_plane_newtonian  benchmark.taylor_green_vortices  benchmark.tracer_adv_diff  benchmark.tracer_advection  benchmark.tuscan  benchmark.uniform_velocity_sphere  incflo-tests.ini  inputs.channel_sphere  inputs.couette_cylinder  inputs.couette_twocylinders  inputs.poiseuille_annulus  inputs.rotating_cylinder  inputs.taylor_couette
tools/: CMakeLists.txt  README.md  abl_plots_compare.py  amrex_particle.py  amrex_plotfile.py  amrex_utils.py  avg_lines.py  calc_inflowoutflow_stats.py  convert_amrex_hdf5_plotfile.py  convert_native_sample_to_time_series.py  convert_native_sampling_to_structured_ascii.py  example_plotfile_io.py  fcompare_particles.py  freesurface_plots.py  generate_native_boundary_plane.py  generate_native_boundary_plane_header.py  lineplot.py  modify_hdf5_attributes.py  naluwind2amrwind.py  native_boundary_plane.py  plot_lines.py  postproamrwind.py  readme  refine_native_boundary_plane.py  sampling_dam_break_godunov_ascii.py  sampling_dam_break_godunov_native.py  sampling_dam_break_godunov_netcdf.py
unit_tests/: CMakeLists.txt  test_config.cpp  utest_main.cpp
(+18458 files in other folders)
